--- a/configuration/exodus-pipeline.yaml
+++ b/configuration/exodus-pipeline.yaml
@@ -28,7 +28,7 @@ Parameters:
     Description: The source branch of the targeted repository
   githubToken:
     Type: String
-    Description: A GitHub access token token to authorize webhooks
+    Description: A GitHub access token to authorize webhooks
   region:
     Type: String
     Default: us-east-1
