Move exodus Content-Type handling from S3 to DynamoDB - integration tests
The previous behavior of adding query string to uri was broken.
We need to write to querystring instead and use the 'response-content-type'
attriute.

https://projects.engineering.redhat.com/browse/RHELDST-1324
https://projects.engineering.redhat.com/browse/RHELDST-2372

--- a/.pylintrc
+++ b/.pylintrc
@@ -96,3 +96,4 @@ disable=print-statement,
         # we use black code style and don't need additional checks
         bad-continuation,
         line-too-long,
+        invalid-name,
