Update testing and dependency tools
This commit includes the addition of isort and mypy checks, transition
to pip-compile requirements listing, and shifts to Python3.7 for
testing, as exodus-lambda builds and runs using that version.

The isort and black tools were run against the repository and some test
changes were necessary upon switching to pip-compile dependencies.

--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,43 @@
 [tox]
-envlist = py36, py37, static, docs
-skip_missing_interpreters = true
+envlist = py37, static, docs
 
 [testenv]
 deps=
-	-rrequirements.txt
-	-rtest-requirements.txt
+	-r requirements.txt
+	-r test-requirements.txt
 commands=pytest {posargs}
 whitelist_externals=sh
+
+[testenv:static]
+commands=
+    mypy -p exodus_lambda -p tests
+	sh -c 'pylint exodus_lambda; test $(( $? & (1|2|4|32) )) = 0'
+	black --check .
+
+[testenv:cov]
+usedevelop=true
+commands=
+	pytest --cov-report=html --cov=exodus_lambda {posargs}
+
+[testenv:cov-travis]
+passenv = TRAVIS TRAVIS_*
+usedevelop=true
+commands=
+	pytest --cov=exodus_lambda {posargs}
+	coveralls
+
+[testenv:docs]
+use_develop=true
+commands=
+	sphinx-build -M html docs docs/_build
 
 # Create a lambda deployment package.
 [testenv:package]
 skip_install=true
-deps=
 whitelist_externals=
     sh
     rm
     cp
-commands_pre=
 commands=
     rm -rf ./package package.zip
 
@@ -31,54 +51,18 @@ commands=
     sh -c 'cd package && zip -r ../package.zip .'
     rm -rf ./package
 
-[testenv:static]
-deps=
-	black
-	pylint
-commands_pre=
+[testenv:integration-tests]
+envlist = py37
+passenv = *
 commands=
-	black --check .
-	sh -c 'pylint exodus_lambda; test $(( $? & (1|2|4|32) )) = 0'
-
-[testenv:cov]
-deps=
-	pytest-cov
-	coveralls
-usedevelop=true
-commands_pre=
-commands=
-	pytest --cov-report=html --cov=exodus_lambda {posargs}
-
-[testenv:cov-travis]
-passenv = TRAVIS TRAVIS_*
-deps=
-	pytest-cov
-	coveralls
-usedevelop=true
-commands_pre=
-	python -m pip install --require-hashes -rrequirements.txt -rtest-requirements.txt
-commands=
-	pytest --cov=exodus_lambda {posargs}
-	coveralls
-
-[testenv:docs]
-deps=
-	sphinx
-	alabaster
-use_develop=true
-commands_pre=
-commands=
-	sphinx-build -M html docs docs/_build
+	pytest ./tests/integration --lambda-stack {env:STACK_NAME} {posargs}
 
 [pytest]
 testpaths = tests
 addopts = -v
 
-[testenv:integration-tests]
-envlist = py37
-passenv = *
-deps=
-	-rrequirements.txt
-	-rtest-requirements.txt
-commands=
-	pytest ./tests/integration --lambda-stack {env:STACK_NAME} {posargs}
+[coverage:run]
+relative_files = true
+
+[flake8]
+max_line_length = 100
