--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,11 @@ exclude = '''
   | \dist
 )/
 '''
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+line_length = 79
