Move CI to Github actions from Travis.ci [RHELDST-5504]
Additionally introduces linting action.

--- a/tox.ini
+++ b/tox.ini
@@ -19,15 +19,18 @@ usedevelop=true
 commands=
 	pytest --cov-report=html --cov=exodus_lambda {posargs}
 
-[testenv:cov-travis]
-passenv = TRAVIS TRAVIS_*
+[testenv:cov-ci]
+passenv=GITHUB_*
 usedevelop=true
 commands=
 	pytest --cov=exodus_lambda {posargs}
-	coveralls
+	coveralls --service=github
 
 [testenv:docs]
 use_develop=true
+deps=
+    sphinx
+    graphviz
 commands=
 	sphinx-build -M html docs docs/_build
 
