--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ whitelist_externals=sh
 
 [testenv:static]
 commands=
-    mypy -p exodus_lambda -p tests
+    mypy --install-types --non-interactive -p exodus_lambda -p tests
 	sh -c 'pylint exodus_lambda; test $(( $? & (1|2|4|32) )) = 0'
 	black --check .
 
