--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,10 @@ botocore==1.21.17 \
     #   -r requirements.in
     #   boto3
     #   s3transfer
+cachetools==4.2.4 \
+    --hash=sha256:89ea6f1b638d5a73a4f9226be57ac5e4f399d22770b92355f92dcb0f7f001693 \
+    --hash=sha256:92971d3cb7d2a97efff7c7bb1657f21a8f5fb309a37530537c71b1774189f2d1
+    # via -r requirements.in
 cdn-definitions==2.1.0 \
     --hash=sha256:2d4438564435e50c9a1a2db4928d622a2c09453dc3942ca8eea9d8f98ee1977a
     # via -r requirements.in
