exodus-lambda resolves releasever aliases [RHELDST-7901]
The releasever aliases are a collection of "src" to "dest" mappings
produced by exodus-config. Much like the origin and rhui aliases
resolved by the origin-request function, the origin-request lambda
translates requests for URIs prefixed with the releasever alias'
"src" value into a new URI prefixed by the corresponding "dest"
value.

--- a/tests/test_data/data.yaml
+++ b/tests/test_data/data.yaml
@@ -11,3 +11,7 @@ origin_alias:
 
 - src: /origin/rpm
   dest: /origin/rpms
+
+releasever_alias:
+- src: /content/dist/rhel/server/7/7Server
+  dest: /content/dist/rhel/server/7/7.9
