Make improvements to CI static checks
Added isort --check to tox static job
Removed linting GitHub workflow
Removed flake8 dependency

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,8 @@ whitelist_externals=sh
 commands=
     mypy --install-types --non-interactive -p exodus_lambda -p tests
 	sh -c 'pylint exodus_lambda; test $(( $? & (1|2|4|32) )) = 0'
-	black --check .
+    black --check .
+    isort --check .
 
 [testenv:cov]
 usedevelop=true
@@ -65,6 +66,3 @@ addopts = -v
 
 [coverage:run]
 relative_files = true
-
-[flake8]
-max_line_length = 100
