--- a/tox.ini
+++ b/tox.ini
@@ -50,6 +50,7 @@ commands=
     pip install --no-deps --target ./package .
 
     # Always using hardcoded config for now.
+    sh -c 'envsubst < configuration/lambda_config.template > configuration/lambda_config.json'
     cp configuration/lambda_config.json package
 
     sh -c 'cd package && zip -r ../package.zip .'
