reftest: support absent items

--- a/support/reftest/data.yml
+++ b/support/reftest/data.yml
@@ -41,3 +41,5 @@ test_data:
 - path: /content/dist/rhel/atomic/7/7Server/x86_64/ostree/repo/refs/heads/rhel-atomic-host/7/x86_64/standard
   content-type: text/plain
 - path: /content/dist/rhel8/8.2/x86_64/baseos/iso/rhel-8.2-x86_64-boot.iso
+- path: /content/dist/rhel8/8.2/x86_64/baseos/iso/does-not-exist.iso
+  state: absent
