Add signed cookie endpoint [RHELDST-8859]
The new endpoint enables signed URls/cookies onto Exodus CloudFront
distributions. One can now request "/_/cookie/<url>" of the distribution
to generate a signed cookie and be redirected to the requested URL.

This commit also updates configuration and cloudformation templates to
appropriately support this feature.

--- a/configuration/lambda_config.template
+++ b/configuration/lambda_config.template
@@ -12,9 +12,12 @@
     ]
   },
   "config_cache_ttl": $EXODUS_CONFIG_CACHE_TTL,
+  "cookie_ttl": $EXODUS_COOKIE_TTL,
   "headers": {
-    "max_age": "$EXODUS_HEADERS_MAX_AGE"
+    "max_age": $EXODUS_HEADERS_MAX_AGE
   },
+  "secret_arn": "$EXODUS_SECRET_ARN",
+  "key_id": "$EXODUS_KEY_ID",
   "logging": {
     "version": 1,
     "incremental": "True",
