--- a/configuration/exodus-lambda-deploy.yaml
+++ b/configuration/exodus-lambda-deploy.yaml
@@ -24,8 +24,27 @@ Parameters:
     Type: String
     Default: None
     Description: The IAM Role ARN for Lambda Function resource
+  keyids:
+    Type: CommaDelimitedList
+    Default: None
+    Description: A list of secret key IDs for Distribution key groups
+
+Conditions:
+  EnableKeyGroup: !Not
+    - !Equals
+      - !Ref keyids
+      - None
 
 Resources:
+  KeyGroup:
+    Type: AWS::CloudFront::KeyGroup
+    Condition: EnableKeyGroup
+    Properties:
+      KeyGroupConfig:
+        Name: !Sub ${project}-cdn-${env}
+        Comment: !Sub Signed URLs and cookies for ${project}-cdn-${env}
+        Items: !Ref keyids
+
   CachePolicy:
     Type: AWS::CloudFront::CachePolicy
     Properties:
@@ -36,7 +55,11 @@ Resources:
         Name: !Sub ${project}-cache-policy-${env}
         ParametersInCacheKeyAndForwardedToOrigin:
           CookiesConfig:
-            CookieBehavior: none
+            CookieBehavior: whitelist
+            Cookies:
+              - CloudFront-Key-Pair-Id
+              - CloudFront-Policy
+              - CloudFront-Signature
           EnableAcceptEncodingGzip: false
           HeadersConfig:
             HeaderBehavior: whitelist
@@ -64,6 +87,11 @@ Resources:
             - EventType: origin-response
               LambdaFunctionARN: !Ref OriginResponseFunc.Version
           TargetOriginId: !Sub S3-${project}-cdn-${env}
+          TrustedKeyGroups:
+            !If
+              - EnableKeyGroup
+              - !Ref KeyGroup
+              - !Ref AWS::NoValue
           ViewerProtocolPolicy: redirect-to-https
         Enabled: true
         HttpVersion: http2
