Fix a template error
CF stack "exodus-lambda-dev" throw a template error: every Fn::Equals
object requires a list of 2 string parameters.

(1) Cast keyids(CommaDelimitedList) to String
(2) None -> ""

--- a/configuration/exodus-lambda-deploy.yaml
+++ b/configuration/exodus-lambda-deploy.yaml
@@ -32,8 +32,8 @@ Parameters:
 Conditions:
   EnableKeyGroup: !Not
     - !Equals
-      - !Ref keyids
-      - None
+      - !Join ["", !Ref keyids]
+      - ""
 
 Resources:
   KeyGroup:
