Split config file generation into a separate script
We do env var substitution on a template in order to generate
lambda_config.json. This was previously embedded in
scripts/build-package.

It's useful sometimes to be able to do that outside of building the
package, e.g. in order to manually generate a config file for
testing, so let's move that into a separate script.

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,6 @@ skip_install=true
 whitelist_externals=
     sh
     rm
-    cp
 commands=
     rm -rf ./package package.zip
 
@@ -49,9 +48,7 @@ commands=
     pip install --require-hashes -r requirements.txt --target ./package
     pip install --no-deps --target ./package .
 
-    # Always using hardcoded config for now.
-    sh -c 'envsubst < configuration/lambda_config.template > configuration/lambda_config.json'
-    cp configuration/lambda_config.json package
+    sh -c 'scripts/mk-config > package/lambda_config.json'
 
     sh -c 'cd package && zip -r ../package.zip .'
     rm -rf ./package
