Introduce fakefront: supporting dev server
Run `tox -e fakefront' to deploy lambdas via a local development server.
This server emulates enough of the CloudFront Lambda@Edge behaviors for
the exodus-lambda code to be usable. It is primarily intended to be used
with the localstack container deployed via the exodus-gw dev env.

Possible uses of this include:

- more productive development: test local changes instantly with hot
  reload, don't need to do a new lambda deployment for every change

- work with a fully functional exodus-rsync => exodus-gw =>
  exodus-lambda chain locally without involving any remote services

- deploy a fully functional integration test environment in openshift
  without having to deploy any AWS resources / incur any AWS costs

--- a/tox.ini
+++ b/tox.ini
@@ -53,6 +53,31 @@ commands=
     sh -c 'cd package && zip -r ../package.zip .'
     rm -rf ./package
 
+[testenv:fakefront]
+# Serve exodus-lambda through a local development server which simulates
+# basic CloudFront behaviors.
+#
+# The default configuration of this environment is designed to work with
+# the localstack instance deployed by the exodus-gw dev env, described
+# at: https://release-engineering.github.io/exodus-gw/development.html
+#
+# You will have to tweak the environment variables if you use a different
+# environment, or different bucket & table names.
+passenv = EXODUS_*
+usedevelop = true
+deps=
+    gunicorn
+setenv =
+    EXODUS_AWS_ENDPOINT_URL=https://localhost:3377
+    EXODUS_TABLE=my-table
+    EXODUS_CONFIG_TABLE=my-config
+    ORIGIN_REQUEST_LOGGER_LEVEL=DEBUG
+    ORIGIN_RESPONSE_LOGGER_LEVEL=DEBUG
+    EXODUS_LOG_FORMAT=%(asctime)s - %(levelname)s - %(message)s
+    EXODUS_KEY_ID=FAKEFRONT
+commands =
+    gunicorn support.fakefront -b 127.0.0.1:8049 --reload {posargs}
+
 [testenv:integration-tests]
 passenv = *
 commands=
