--- a/tox.ini
+++ b/tox.ini
@@ -78,6 +78,35 @@ setenv =
 commands =
     gunicorn support.fakefront -b 127.0.0.1:8049 --reload {posargs}
 
+[testenv:fakefront-podman]
+# Like 'fakefront' but builds & runs via a container image.
+#
+# This testenv is mainly intended for sanity checking the image.
+# Otherwise there is generally no advantage in using this over
+# the 'fakefront' testenv.
+skip_install=true
+whitelist_externals=
+    podman
+setenv =
+    EXODUS_AWS_ENDPOINT_URL=https://localhost:3377
+    EXODUS_TABLE=my-table
+    EXODUS_CONFIG_TABLE=my-config
+    ORIGIN_REQUEST_LOGGER_LEVEL=DEBUG
+    ORIGIN_RESPONSE_LOGGER_LEVEL=DEBUG
+    EXODUS_LOG_FORMAT=%(asctime)s - %(levelname)s - %(message)s
+    EXODUS_KEY_ID=FAKEFRONT
+    REQUESTS_CA_BUNDLE=/etc/pki/tls/certs/ca-bundle.crt
+commands =
+    podman build . -t fakefront -f support/fakefront/Containerfile
+    podman run \
+      --network host \
+      --security-opt label=disable \
+      -v /etc/pki/tls/certs/ca-bundle.crt:/etc/pki/tls/certs/ca-bundle.crt:ro \
+      --env REQUESTS_CA_BUNDLE --env 'EXODUS*' --env 'ORIGIN*' \
+      fakefront \
+      -b 127.0.0.1:8049 \
+      {posargs}
+
 [testenv:integration-tests]
 passenv = *
 commands=
@@ -98,6 +127,7 @@ basepython = python3.9
 skip_install = true
 skipsdist = true
 commands =
+    pip-compile -U --generate-hashes requirements-fakefront.in
     pip-compile -U --generate-hashes requirements.in
-    pip-compile -U --generate-hashes requirements.in test-requirements.in -o test-requirements.txt
+    pip-compile -U --generate-hashes requirements-fakefront.in requirements.in test-requirements.in -o test-requirements.txt
 # end pip-compile
