--- a/tox.ini
+++ b/tox.ini
@@ -89,3 +89,15 @@ addopts = -v
 
 [coverage:run]
 relative_files = true
+
+[testenv:pip-compile]
+# Recompile all requirements .txt files using pip-compile.
+# Don't edit me - I'm deployed from a template.
+deps = pip-tools
+basepython = python3.9
+skip_install = true
+skipsdist = true
+commands =
+    pip-compile -U --generate-hashes requirements.in
+    pip-compile -U --generate-hashes requirements.in test-requirements.in -o test-requirements.txt
+# end pip-compile
