Replace coveralls in CI with coverage CLI option [RHELDST-11054]
This commit removes coveralls integration with CI workflow, replacing it
with the --cov-fail-under option available through pytest-cov.

--- a/tox.ini
+++ b/tox.ini
@@ -21,11 +21,9 @@ commands=
 	pytest --cov-report=html --cov=exodus_lambda {posargs}
 
 [testenv:cov-ci]
-passenv=GITHUB_*
 usedevelop=true
 commands=
-	pytest --cov=exodus_lambda {posargs}
-	coveralls --service=github
+	pytest --cov-fail-under=100 --cov=exodus_lambda {posargs}
 
 [testenv:docs]
 use_develop=true
