Integrate bandit SAST tool with CI [RHELDST-14783]

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,11 @@ usedevelop=true
 commands=
 	pytest --cov-fail-under=100 --cov=exodus_lambda {posargs}
 
+[testenv:bandit-test]
+usedevelop=true
+commands=
+	bandit -r -ll -c bandit.yaml .
+
 [testenv:docs]
 use_develop=true
 deps=
