--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
         python -m pip install -U pip
         pip install tox
 
+    - name: Run bandit test
+      run: tox -e bandit-test
+
     - name: Run auto-tests
       run: tox -e cov-ci
 
