--- a/tox.ini
+++ b/tox.ini
@@ -25,10 +25,15 @@ usedevelop=true
 commands=
 	pytest --cov-fail-under=100 --cov=exodus_lambda {posargs}
 
-[testenv:bandit-test]
+[testenv:bandit]
 usedevelop=true
 commands=
 	bandit -r -ll -c bandit.yaml .
+
+[testenv:safety]
+usedevelop=true
+commands=
+	safety check --full-report
 
 [testenv:docs]
 use_develop=true
