Fix compatibility with tox 4
Cope with some backwards-incompatible changes in tox 4:

- The term 'whitelist' must be replaced with 'allowlist'
- passenv syntax changed and we can no longer provide multiple values on
  a single line separated by space. Use the longer syntax which, per
  [1], should work for tox 3 and 4

[1] https://tox.wiki/en/4.0.3/faq.html#tox-4-changed-ini-rules

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps=
 	-r requirements.txt
 	-r test-requirements.txt
 commands=pytest {posargs}
-whitelist_externals=sh
+allowlist_externals=sh
 
 [testenv:static]
 commands=
@@ -46,7 +46,7 @@ commands=
 # Create a lambda deployment package.
 [testenv:package]
 skip_install=true
-whitelist_externals=
+allowlist_externals=
     sh
     rm
 commands=
@@ -71,7 +71,9 @@ commands=
 #
 # You will have to tweak the environment variables if you use a different
 # environment, or different bucket & table names.
-passenv = EXODUS_* ORIGIN_*
+passenv =
+    EXODUS_*
+    ORIGIN_*
 usedevelop = true
 deps=
     gunicorn
@@ -93,9 +95,11 @@ commands =
 # Otherwise there is generally no advantage in using this over
 # the 'fakefront' testenv.
 skip_install=true
-whitelist_externals=
+allowlist_externals=
     podman
-passenv = EXODUS_* ORIGIN_*
+passenv =
+    EXODUS_*
+    ORIGIN_*
 setenv =
     EXODUS_AWS_ENDPOINT_URL={env:EXODUS_AWS_ENDPOINT_URL:https://localhost:3377}
     EXODUS_TABLE={env:EXODUS_TABLE:my-table}
