Logging: record milliseconds in timestamp by default [RHELDST-16619]
Overrides logging's formatTime to use datetime objects and a period
separator for msec. Removes the datefmt set in the lambda config template
but the field remains configurable should the client/service choose.
All log times are now in UTC timezone.

--- a/configuration/lambda_config.template
+++ b/configuration/lambda_config.template
@@ -25,9 +25,7 @@
     "incremental": "True",
     "disable_existing_loggers": "False",
     "formatters": {
-      "default": {
-        "datefmt": "%Y-%m-%d %H:%M:%S"
-      }
+      "default": {}
     },
     "loggers": {
       "origin-response": {
