--- a/configuration/lambda_config.template
+++ b/configuration/lambda_config.template
@@ -17,6 +17,7 @@
     "max_age": $EXODUS_HEADERS_MAX_AGE
   },
   "secret_arn": "$EXODUS_SECRET_ARN",
+  "secret_region": "us-east-1",
   "key_id": "$EXODUS_KEY_ID",
   "lambda_version": "$EXODUS_LAMBDA_VERSION",
   "index_filename": "$EXODUS_INDEX_FILENAME",
