Upgrade exodus-cdn to Python3.11 runtime [RHELDST-18509]

--- a/support/fakefront/Containerfile
+++ b/support/fakefront/Containerfile
@@ -3,7 +3,7 @@ FROM registry.access.redhat.com/ubi8/ubi-minimal@sha256:8d43664c250c72d35af8498c
 COPY . /usr/local/src/exodus-lambda
 
 RUN \
-    microdnf -y install shadow-utils python39 /usr/bin/openssl /usr/bin/envsubst \
+    microdnf -y install shadow-utils python3.11 python3.11-pip /usr/bin/openssl /usr/bin/envsubst \
     && cd /usr/local/src/exodus-lambda \
     && pip3 install --require-hashes -r requirements-fakefront.txt \
     && pip3 install --editable . \
