Reduce boto connect/read timeouts [RHELDST-21242]
The default value of connect_timeout and read_timeout in boto is 60
seconds. Our lambdas timeout after 15 seconds. There's no reason for the
inner timeouts to exceed the outer and reducing the inner timeouts may
prove more helpful in debugging.

--- a/configuration/lambda_config.template
+++ b/configuration/lambda_config.template
@@ -12,6 +12,8 @@
     ]
   },
   "config_cache_ttl": $EXODUS_CONFIG_CACHE_TTL,
+  "connect_timeout": $EXODUS_CONNECT_TIMEOUT,
+  "read_timeout": $EXODUS_READ_TIMEOUT,
   "cookie_ttl": $EXODUS_COOKIE_TTL,
   "headers": {
     "max_age": $EXODUS_HEADERS_MAX_AGE
