Fix latest requirements not usable for deployment
We ran pip-compile here without any particular arguments, while in the
final deployment environment we run it with arguments selecting binary
packages (wheels) only.

frozendict 2.4.0 exposed that this is flawed: there is no cp311 or py3
wheel uploaded for that at time of writing. This means that release is
unusable during deployment for us as we require a compatible wheel; but
since pip-compile was allowed to use source packages, it would consider
2.4.0 as a usable version.

To avoid such issues we must ensure that both pip-compile here and 'pip
install' during deployment use compatible package-selection args. Update
the pip-compile commands here accordingly.

Additionally, with the new args, package resolution for
test-requirements failed on 'coveralls'. We don't use that anymore, so
just remove it.

--- a/tox.ini
+++ b/tox.ini
@@ -136,7 +136,10 @@ deps = pip-tools
 basepython = python3.11
 skip_install = true
 skipsdist = true
+# Note that --pip-args should match the deployment environment to ensure
+# that the compiled requirements files here are compatible with that
+# environment (most notably, only using binary packages).
 commands =
-    pip-compile -U --resolver=backtracking --generate-hashes requirements-fakefront.in
-    pip-compile -U --resolver=backtracking --generate-hashes requirements.in
-    pip-compile -U --resolver=backtracking --generate-hashes requirements-fakefront.in requirements.in test-requirements.in -o test-requirements.txt
+    pip-compile -U --resolver=backtracking --generate-hashes requirements-fakefront.in --pip-args='--platform "manylinux2014_x86_64" --only-binary=":all:" --python-version="3.11" --implementation cp'
+    pip-compile -U --resolver=backtracking --generate-hashes requirements.in --pip-args='--platform "manylinux2014_x86_64" --only-binary=":all:" --python-version="3.11" --implementation cp'
+    pip-compile -U --resolver=backtracking --generate-hashes requirements-fakefront.in requirements.in test-requirements.in -o test-requirements.txt --pip-args='--platform "manylinux2014_x86_64" --only-binary=":all:" --python-version="3.11" --implementation cp'
