Strip certain headers from S3 responses [RHELDST-22613]
We were allowing all headers returned by S3 to propagate normally.
It would be better to strip some of them.
These are considered to be internal implementation details and we'd
rather not have clients come to depend on them, since that might make
it difficult for us to change things later. For example: we don't
want people to start extracting MD5 checksums from
"x-amz-meta-exodus-migration-md5".

The set of headers to strip can be specified by a new 'strip_headers'
config item, but there's a reasonable hardcoded default.

--- a/docs/schemas/raw/lambda_config.yaml
+++ b/docs/schemas/raw/lambda_config.yaml
@@ -53,6 +53,17 @@ properties:
     required:
     - max_age
 
+  strip_headers:
+    type: array
+    description: >-
+      List of header prefixes to strip from responses.
+      Any headers starting with any of these strings will be removed from
+      S3 responses in the origin_response lambda.
+    items:
+      type: string
+      maxLength: 100
+      minLength: 1
+
   index_filename:
     type: string
     description: >-
